<resources>
    <string name="app_name">MovieApp</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="title">Title</string>
    <string name="release">Release</string>
    <string name="genre">Genre</string>
    <string name="duration">Duration</string>
    <string name="user_score">User Score:</string>
    <string name="overview">Overview</string>
    <string name="user_score_desc">%s</string>
    <string name="release_desc">(%s)</string>
</resources>